--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-three-fiber": "^6.0.13",
+    "styled-components": "^5.3.0",
     "three": "^0.130.1",
     "web-vitals": "^1.1.2"
   },
